# saxtract

./: .gitignore  .travis.yml  HISTORY.rst  Makefile  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: python-package.yml
saxtract/: __init__.py  cli.py  saxtract.py
tests/: perf_tests.py  test_saxtract.py
tests/data/: bars.xml
