[project]
name = "saxtract"
version = "0.1.0"
description = "Python SAX parser to extract xml"
authors = [
    {name = "danny crasto", email = "danwald79@gmail.com"}
]
license = {text = "MIT license"}
requires-python = ">=3.12"
dependencies = [
    "click>=7.0",
]

[project.scripts]
saxtract = "saxtract.cli:main"

[project.urls]
Homepage = "https://github.com/danwald/saxtract"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
collect_ignore = ["setup.py"]

[dependency-groups]
dev = [
    "bump2version>=1.0.1",
    "coverage>=7.13.5",
    "flake8>=7.3.0",
    "pytest>=9.0.2",
    "twine>=6.2.0",
    "watchdog>=6.0.0",
    "wheel>=0.46.3",
]
